--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
     "flash": "^1.1.0",
     "http-errors": "~1.6.3",
     "jade": "^1.9.2",
