--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,21 @@
-version: '3.9'
+version: "3.9"
 
 services:
-  mongo_db:
-    container_name: db_container
-    image: mongo:latest
-    restart: always
+  model-api:
+    build: .
+    networks:
+      - food-cal-model-and-service-api
+    image: arrin/foodcal-model:1.0.0
     ports:
-      - 2717:27017
-    volumes: 
-      - mongo_db:/data/db
-    
+      - "6543:6543"
+
   foodcalApi:
     build: .
+    networks:
+      - food-cal-model-and-service-api
     image: arrin/foodcalapi
     ports:
       - 4000:3000
-    volumes:
-      - /usr/src/app/
-    environment:
-      ports: 3000
-      MONGO_URI: mongodb://mongo_db:27017
-      DB_NAME: Food_cal
-      NAME: Foodcal
-    depends_on:
-      - mongo_db
 
-volumes:
-  mongo_db: {}
-
-
-      
+networks:
+  food-cal-model-and-service-api:
