--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     networks:
       - food-cal-model-and-service-api
-    image: arrin/foodcal-model:lastest
+    image: arrin/foodcal-model:latest
     ports:
       - "8000:8000"
 
@@ -13,7 +13,7 @@ services:
     build: .
     networks:
       - food-cal-model-and-service-api
-    image: arrin/foodcal-api:lastest
+    image: arrin/foodcal-api:latest
     ports:
       - 4000:3000
 
